--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#onas">O nas</a></li>
                         <li><a href="#pokoj">Pokój</a></li>
-                        <li><a href="#produkty">Produkty</a></li>
                         <li><a href="#menu">Menu</a></li>
                         <li><a href="#eventy">Eventy</a></li>
+                        <li><a href="#kontakt">Kontakt</a></li>
                     </ul>
                 </div>
             </nav>
