--- a/FRONTEND/src/index.html
+++ b/FRONTEND/src/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link 
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- ikony -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
+    />
+    <!-- twój CSS z wcześniejszej wiadomości -->
     <link rel="stylesheet" href="../styles/styles.css" />
-    
-    <title>Projekt test | Olimp</title>
-    </head>
-        <body>
-            <nav>
-                <div class="nav__bar"></div>
-                <div class="nav__header">
-                    <div class="logo nav__logo">
-                        <div>H</div>
-                        <span>HOTEL<br>Olimp</span>A
-                        </div>
-                        <div class="nav__menu__btn" id="menu-btn">
-                            <i class="ri-menu-line"></i>
-                        </div>
-                    </div>
-                    <ul class="nav__links" id="nav--links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#onas">O nas</a></li>
-                        <li><a href="#pokoj">Pokój</a></li>
-                        <li><a href="#menu">Menu</a></li>
-                        <li><a href="#eventy">Eventy</a></li>
-                        <li><a href="#kontakt">Kontakt</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </body>
-    </html>
+    <title>Hotel Olimp</title>
+  </head>
+  <body>
+    <!-- NAV -->
+    <nav>
+      <div class="nav__bar">
+        <div class="nav__header">
+          <div class="logo nav__logo">
+            <div>H</div>
+            <span>HOTEL<br />Olimp</span>
+          </div>
+
+          <button class="nav__menu__btn" id="menu-btn" aria-label="Otwórz menu">
+            <i class="ri-menu-line"></i>
+          </button>
+        </div>
+
+        <ul class="nav__links" id="nav--links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#onas">O nas</a></li>
+          <li><a href="#pokoj">Pokój</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#eventy">Eventy</a></li>
+          <li><a href="#kontakt">Kontakt</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- HERO (pierwszy ekran jak na zrzucie) -->
+    <section id="home" class="hero">
+      <div class="eyebrow">DRIP TUTAJ COS NAPISAC </div>
+      <h1>Idealne miejsce<br />dla całej rodziny</h1>
+      <p>
+        Odkryj Hotel Olimp – miejsce, w którym tropikalny relaks spotyka się z
+        elegancją. Zatrzymaj się u nas, a resztą zajmiemy się my. yoł
+      </p>
+      <a class="btn" href="#onas">Interaktywny spacer? czy cos</a>
+    </section>
+
+    <!-- (reszta sekcji w przyszłości) -->
+  </body>
+</html>
