--- a/FRONTEND/src/index.html
+++ b/FRONTEND/src/index.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- ikony -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
-    />
-    <!-- twój CSS z wcześniejszej wiadomości -->
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" />
+
+   <link rel="stylesheet" href="../styles/styles.css" />
+
     <title>Hotel Olimp</title>
   </head>
   <body>
-    <!-- NAV -->
     <nav>
       <div class="nav__bar">
         <div class="nav__header">
@@ -21,34 +17,37 @@
             <div>H</div>
             <span>HOTEL<br />Olimp</span>
           </div>
-
           <button class="nav__menu__btn" id="menu-btn" aria-label="Otwórz menu">
             <i class="ri-menu-line"></i>
           </button>
         </div>
-
         <ul class="nav__links" id="nav--links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#onas">O nas</a></li>
-          <li><a href="#pokoj">Pokój</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#eventy">Eventy</a></li>
-          <li><a href="#kontakt">Kontakt</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="../pages/onas.html">O nas</a></li>
+          <li><a href="../pages/pokoje.html">Pokoje</a></li>
+          <li><a href="../pages/menu.html">Menu</a></li>
+          <li><a href="../pages/eventy.html">Eventy</a></li>
+          <li><a href="../pages/kontakt.html">Kontakt</a></li>
         </ul>
       </div>
     </nav>
 
-    <!-- HERO (pierwszy ekran jak na zrzucie) -->
     <section id="home" class="hero">
-      <div class="eyebrow">DRIP TUTAJ COS NAPISAC </div>
+      <div class="eyebrow">DRIP TUTAJ COS NAPISAC</div>
       <h1>Idealne miejsce<br />dla całej rodziny</h1>
       <p>
-        Odkryj Hotel Olimp – miejsce, w którym tropikalny relaks spotyka się z
-        elegancją. Zatrzymaj się u nas, a resztą zajmiemy się my. yoł
+        Odkryj Hotel Olimp – miejsce, w którym tropikalny relaks spotyka się z elegancją.
+        Zatrzymaj się u nas, a resztą zajmiemy się my.
       </p>
-      <a class="btn" href="#onas">Interaktywny spacer? czy cos</a>
+      <a class="btn" href="../pages/onas.html">Interaktywny spacer? czy cos</a>
     </section>
 
-    <!-- (reszta sekcji w przyszłości) -->
+    <script>
+      const btn = document.getElementById('menu-btn');
+      const links = document.getElementById('nav--links');
+      if (btn && links) {
+        btn.addEventListener('click', () => links.classList.toggle('open'));
+      }
+    </script>
   </body>
 </html>
